devops/k8s/backend.yaml
apiVersion: v1
kind: Service
metadata:
  name: pixerpost-backend
  labels:
    app: pixerpost-backend
spec:
  ports:
    - name: http
      port: 3000
      protocol: TCP
      targetPort: 3000
  selector:
    app: pixerpost-backend
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: pixerpost-backend
spec:
  hosts:
    - "api.dev.pixerpost.com"
  gateways:
    - default/ingressgateway-dev-pixerpost-com
  http:
    - route:
        - destination:
            host: pixerpost-backend
            port:
              number: 3000
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pixerpost-backend
spec:
  replicas: 2
  selector:
    matchLabels:
      app: pixerpost-backend
  template:
    spec:
      containers:
        - name: pixerpost-backend
          image: ghcr.io/pixerpost/pixerpost_backend
          resources:
            requests:
              cpu: "0.1"
          readinessProbe:
            httpGet:
              path: /
              port: 3000
            initialDelaySeconds: 15
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /
              port: 3000
            initialDelaySeconds: 15
            periodSeconds: 20
          ports:
            - containerPort: 3000
      imagePullSecrets:
        - name: dockercfg
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pixerpost-backend-queue
spec:
  replicas: 2
  selector:
    matchLabels:
      app: pixerpost-backend
  template:
    spec:
      containers:
        - name: pixerpost-backend-queue
          image: ghcr.io/pixerpost/pixerpost_backend
          resources:
            requests:
              cpu: "0.1"
          readinessProbe:
            httpGet:
              path: /
              port: 3000
            initialDelaySeconds: 15
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /
              port: 3000
            initialDelaySeconds: 15
            periodSeconds: 20
          ports:
            - containerPort: 3000
      imagePullSecrets:
        - name: dockercfg
